fix: align compare accounts cards (#14833)

--- a/packages/wallets/src/features/cfd/screens/CompareAccounts/CompareAccountsScreen.scss
+++ b/packages/wallets/src/features/cfd/screens/CompareAccounts/CompareAccountsScreen.scss
@@ -6,8 +6,6 @@
         margin: 0;
         overflow-x: auto;
         overflow-y: scroll;
-        padding: 0 0 20.1rem;
-        max-height: 80rem;
     }
 
     &__card-list {
